src/ct.release/ct.css
html, body {
    margin:0;
    padding:0;
    border:0;
    background: #000;
    font-family: sans-serif;
    position: relative;
    width: 100%;
    height: 100vh;
}
::selection {
    background-color: /*!@accent@*/;
}
#ct {
    position: relative;
    display: inline-block;
    width: 100%;
    height: 100%;
    line-height: 0;
}
.ct-aLoadingScreen {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    background: #446adb;
    background: /*!@preloaderbackground@*/;
    color: #ffffff;
    color: /*!@preloaderforeground@*/;
    z-index: 2;
    line-height: 1.25;
}
.ct-aLoadingProgress {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    font-size: 1.5rem;
    font-style: italic;
    padding: 1rem 2rem;
    text-align: center;
    min-width: 15rem;
    min-width: 15vw;
}
.ct-aLoadingBar {
    content: '';
    height: 0.2rem;
    border-radius: 1rem;
    position: absolute;
    background: #446adb;
    background: /*!@preloaderforeground@*/;
    left: 0;
    bottom: 0;
    transition: 1s cubic-bezier(0.31, 0.59, 0.29, 1) width;
}
.ct-aMadeWithImage {
    margin-bottom: 1rem;
}
.ct-aMadeWithImage svg {
    width: 33vw;
    height: auto;
}
.ct-aLoadingScreen.hidden {
    visibility: hidden;
    display: none;
}

.aCtJsTextboxInput {
    position: fixed;
    z-index: 2;
    background: transparent;
    border: 0;
    outline: 0;
    text-align: center;
    padding: 0;
    margin: 0;
}

.ct-Errors {
    display: none;
    line-height: 1.25;
    padding: 0.5rem 1.1rem;
    color: #000000;
    background: #fff6d6;
    border: 2px solid #d8b669;
    border-radius: 1rem;
    position: fixed;
    left: 2vw;
    right: 2vw;
    bottom: 2vh;
    max-height: 33%;
    box-sizing: border-box;
    z-index: 2;
    overflow-y: auto;
    cursor: default;
}
.ct-anError {
    padding: 0.5rem 1rem;
    border-color: #000;
    white-space: pre-wrap;
    background-color: #fab8b8;
    border: 1px solid #d45050;
    border-radius: 0.5rem;
    font-family: monospace;
    color: #360000;
    margin-top: 0.5rem;
    cursor: text;
}
.ct-Errors button {
    padding: 0.35em 0.75em;
    font: inherit;
    font-family: sans-serif;
    border-radius: 0.2em;
    cursor: pointer;
    float: right;
    border: 1px solid #a78e35;
    background: #fff3b8;
    transition: 0.25s ease background;
}
.ct-Errors button:hover {
    background: #fff9dc;
}
.ct-Errors button:active {
    background: rgb(199, 159, 14);
}

/*if @pixelatedrender@*/
canvas, img{
    ms-interpolation-mode: nearest-neighbor;
    image-rendering: optimizeSpeed;
    image-rendering: -moz-crisp-edges;
    image-rendering: -webkit-optimize-contrast;
    image-rendering: optimize-contrast;
    image-rendering: pixelated;
}
/*endif @pixelatedrender@*/

/*if @hidecursor@*/
#ct {
    cursor: none;
}
/*endif @hidecursor@*/

/*if @hidemadewithctjs@*/
.ct-aMadeWithImage {
    display: none;
}
/*endif @hidemadewithctjs@*/

/*!@fonts@*/

/*!%css%*/

